// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollingSearchBox should render 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <SearchInput
      filterText="Test"
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
    />
  </Headroom>
</div>
`;

exports[`ScrollingSearchBox should set correct reference 1`] = `undefined`;

exports[`ScrollingSearchBox should space search 1`] = `
<div>
  <Headroom
    height={45}
    pinStart={0}
    scrollHeight={45}
    stickyAncestor={<MockNode />}
  >
    <SearchInput
      filterText="Test"
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
      spaceSearch={true}
    />
  </Headroom>
</div>
`;
